[project]
name = "reserach-template"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Monketu", email = "s2110892@s.tsukuba.ac.jp" }
]
dependencies = [
    "pandas>=2.2.2",
    "numpy>=2.0.1",
    "jupyter>=1.0.0",
    "matplotlib>=3.9.1",
    "seaborn>=0.13.2",
    "japanize-matplotlib>=1.1.3",
    "scikit-learn>=1.5.1",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.5.4",
    "mypy>=1.11.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/"]

[tool.rye.scripts]
format = { cmd = "rye run ruff format" }
lint = {chain = ["lint:ruff", "lint:mypy"]}
"lint:ruff" = "rye run ruff check --fix"
"lint:mypy" = "rye run mypy . --config-file pyproject.toml"